# Aquarite3D

./: CMakeLists.txt  README.md  doxyfile
aquarite/: camera.cpp  camera.h  console.cpp  console.h  core.cpp  core.h  debug.cpp  debug.h  editor.cpp  editor.h  entity.cpp  entity.h  input.cpp  input.h  luascript.cpp  luascript.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  sound.cpp  sound.h  soundmanager.cpp  soundmanager.h  sprite.cpp  sprite.h  terrain.cpp  terrain.h  texture.cpp  texture.h
aquarite/graphics/: cubemap.cpp  cubemap.h  framebuffer.cpp  framebuffer.h  light.cpp  light.h  material.cpp  material.h  shader.cpp  shader.h
aquarite/math/: mousepicker.cpp  mousepicker.h  pointx.h  vec3.cpp  vec3.h
aquarite/shaders/: _spriteFragmentShader.txt  default.fs  default.vs  skybox_default.fs  sprite_default.fs  sprite_default.vs
aquarite/ui/: text.cpp  text.h  uielement.cpp  uielement.h
game/: main.cpp
game/res/example/: scene.ascene
game/res/example/materials/: material.amat
game/res/example/models/: model.amod
game/res/example/textures/: brickwall.tga  window.tga
game/res/example/textures/skybox/: bk.tga  dn.tga  lf.tga  up.tga
